# AutoAnalyze

./: .gitignore  LICENSE.txt  README.md  README_CN.md  README_EN.md  api.md  package-lock.json  用户体验故事.md
backend/: config.json  config.yaml  pyproject.toml  文件清单.md
backend/app/: config.py  main.py
backend/app/api/: conversations.py  execution.py  router.py  status.py  workspace.py
backend/app/core/: execution.py  filesystem.py  image_utils.py  jupyter_execution.py  model_client.py  security.py
backend/app/core/agent/: __init__.py  agent.py  agent_factory.py  dual_agent.py  dual_agent_factory.py  exec_code.py  functions.py  prompts.py  schema.py
backend/app/db/: base.py  session.py
backend/app/db/crud/: crud_conversation.py  crud_execution.py  crud_message.py
backend/app/models/: conversation.py  execution.py  message.py
backend/app/schemas/: __init__.py  config.py  conversation.py  execution.py  filesystem.py  message.py
backend/app/services/: __init__.py  conversation_service.py  execution_service.py  filesystem_service.py  model_service.py
backend/app/utils/: code_parser.py  file_utils.py  logger.py
backend/app/websocket/: __init__.py  handlers.py  manager.py  router.py
examples/exam/: 月考1.csv  月考2.csv  期中考试.csv  期末考试.csv
examples/sale/: 销售数据.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  文件清单.md
frontend/src/: App.vue  main.ts
frontend/src/api/: http.ts  (+6 more)
frontend_app/: index.html  package-lock.json  tailwind.config.ts  vite.config.ts  前端文件清单.md
frontend_app/src/: main.ts
(+61 files in other folders)
