[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.11",
    "fastapi>=0.115.11",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "markitdown>=0.1.0",
    "matplotlib>=3.7.5",
    "openai>=1.70.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.3.2",
    "sqlalchemy>=2.0.39",
    "statsmodels>=0.14.1",
    "uvicorn>=0.33.0",
    "watchdog>=4.0.2",
    "websockets>=15.0.1",
]
